# pybox

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.py  pyproject.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/pybox-python/: Cargo.toml
crates/pybox-python/src/: lib.rs  reactor.rs  reactor_snapshot.rs  snapshot.py
crates/pybox-reactor/: Cargo.toml
crates/pybox-reactor/src/: exec.rs  ioctl.rs  lib.rs  mem.rs  protected.rs  sanitizer.rs
examples/: assign.py  exec.py  inherit.py  snapshot.py  stub.py
python/pybox/: box.py  exception.py  snapshot.py  tool.py
scripts/: benchmarks.py
tests/: test_pybox.py
