[package]
name = "pybox-reactor"
version = {workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
license = {workspace = true}
authors = {workspace = true}
description = {workspace = true}

[dependencies]
rustpython-vm = {workspace = true}
rustpython-pylib = {workspace = true}
libc = {workspace = true}

[lib]
crate-type = ["cdylib"]
